aws-cdk/cdk.out/Vpc.template.json
{
  "Resources": {
    "Vpc01F824461A": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/Resource"
      }
    },
    "Vpc01PublicSubnet1Subnet52644D7B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet1/Subnet"
      }
    },
    "Vpc01PublicSubnet1RouteTable902FF084": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet1/RouteTable"
      }
    },
    "Vpc01PublicSubnet1RouteTableAssociationF05BA358": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01PublicSubnet1RouteTable902FF084"
        },
        "SubnetId": {
          "Ref": "Vpc01PublicSubnet1Subnet52644D7B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet1/RouteTableAssociation"
      }
    },
    "Vpc01PublicSubnet1DefaultRoute0A463A3C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01PublicSubnet1RouteTable902FF084"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Vpc01IGWE5584F53"
        }
      },
      "DependsOn": [
        "Vpc01VPCGWF44E95B8"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet1/DefaultRoute"
      }
    },
    "Vpc01PublicSubnet2Subnet7A06BCF4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet2/Subnet"
      }
    },
    "Vpc01PublicSubnet2RouteTableF1877DF3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet2/RouteTable"
      }
    },
    "Vpc01PublicSubnet2RouteTableAssociationAE879AA9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01PublicSubnet2RouteTableF1877DF3"
        },
        "SubnetId": {
          "Ref": "Vpc01PublicSubnet2Subnet7A06BCF4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet2/RouteTableAssociation"
      }
    },
    "Vpc01PublicSubnet2DefaultRoute88033A37": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01PublicSubnet2RouteTableF1877DF3"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "Vpc01IGWE5584F53"
        }
      },
      "DependsOn": [
        "Vpc01VPCGWF44E95B8"
      ],
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/PublicSubnet2/DefaultRoute"
      }
    },
    "Vpc01IsolatedSubnet1Subnet0E43282E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet1/Subnet"
      }
    },
    "Vpc01IsolatedSubnet1RouteTable58DE5E81": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/IsolatedSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet1/RouteTable"
      }
    },
    "Vpc01IsolatedSubnet1RouteTableAssociation4E41504F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01IsolatedSubnet1RouteTable58DE5E81"
        },
        "SubnetId": {
          "Ref": "Vpc01IsolatedSubnet1Subnet0E43282E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet1/RouteTableAssociation"
      }
    },
    "Vpc01IsolatedSubnet2Subnet0C4F7127": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet2/Subnet"
      }
    },
    "Vpc01IsolatedSubnet2RouteTableD19D4EE1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01/IsolatedSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet2/RouteTable"
      }
    },
    "Vpc01IsolatedSubnet2RouteTableAssociation3558B388": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "Vpc01IsolatedSubnet2RouteTableD19D4EE1"
        },
        "SubnetId": {
          "Ref": "Vpc01IsolatedSubnet2Subnet0C4F7127"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IsolatedSubnet2/RouteTableAssociation"
      }
    },
    "Vpc01IGWE5584F53": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Vpc/Vpc01"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/IGW"
      }
    },
    "Vpc01VPCGWF44E95B8": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc01F824461A"
        },
        "InternetGatewayId": {
          "Ref": "Vpc01IGWE5584F53"
        }
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/Vpc01/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OwQ6CMAyGn8X7mMDFM+Fg9ETAcDVj1FiBzWwdxBDe3aHEeerfL02/P+VJyuOdmGwk2y7qseFzRUJ2zKMryJTP9VOy/KbqImeFa3qUlWsU0MpCKrUjuIimh8ADy6zVEgWhVr9jVhgcBUH4cVIExuejp5N4bdJty8i3ug+gaGElWO2M/Kj+c65Vi6tkYWcxin1y4DFPdg+LGBmnCAfg5Xe+AfhIPCL4AAAA"
      },
      "Metadata": {
        "aws:cdk:path": "Vpc/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Outputs": {
    "ExportsOutputFnGetAttVpc01F824461ADefaultSecurityGroupB47B3935": {
      "Value": {
        "Fn::GetAtt": [
          "Vpc01F824461A",
          "DefaultSecurityGroup"
        ]
      },
      "Export": {
        "Name": "Vpc:ExportsOutputFnGetAttVpc01F824461ADefaultSecurityGroupB47B3935"
      }
    },
    "ExportsOutputRefVpc01PublicSubnet1Subnet52644D7B09B79E25": {
      "Value": {
        "Ref": "Vpc01PublicSubnet1Subnet52644D7B"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc01PublicSubnet1Subnet52644D7B09B79E25"
      }
    },
    "ExportsOutputRefVpc01PublicSubnet2Subnet7A06BCF487C69B65": {
      "Value": {
        "Ref": "Vpc01PublicSubnet2Subnet7A06BCF4"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc01PublicSubnet2Subnet7A06BCF487C69B65"
      }
    },
    "ExportsOutputRefVpc01F824461A2A0E15F5": {
      "Value": {
        "Ref": "Vpc01F824461A"
      },
      "Export": {
        "Name": "Vpc:ExportsOutputRefVpc01F824461A2A0E15F5"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
